--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -29,101 +29,82 @@
     <string name="permission_required_action" msgid="706370952366113539">"Lanjutkan"</string>
     <string name="grant_dialog_button_allow" msgid="1644287024501033471">"Izinkan"</string>
     <string name="grant_dialog_button_deny" msgid="6190589471415815741">"Tolak"</string>
-    <!-- no translation found for permission_more_thumb (3530243737498196228) -->
+    <plurals name="permission_more_thumb" formatted="false" msgid="4392079224649478923">
+      <item quantity="other">+<xliff:g id="COUNT_1">^1</xliff:g></item>
+      <item quantity="one">+<xliff:g id="COUNT_0">^1</xliff:g></item>
+    </plurals>
     <plurals name="permission_more_text" formatted="false" msgid="7291997297174507324">
       <item quantity="other">Plus <xliff:g id="COUNT_1">^1</xliff:g> item tambahan</item>
       <item quantity="one">Plus <xliff:g id="COUNT_0">^1</xliff:g> item tambahan</item>
     </plurals>
-    <string name="cache_clearing_dialog_title" msgid="543177167845854283">"Hapus cache aplikasi dengan <xliff:g id="APP_SEEKING_PERMISSION">%s</xliff:g>?"</string>
-    <string name="cache_clearing_dialog_text" msgid="425995541409682360">"<xliff:g id="APP_SEEKING_PERMISSION">%s</xliff:g> ingin menghapus beberapa file sementara. Jika diizinkan, penggunaan baterai atau data dapat meningkat."</string>
+    <string name="cache_clearing_dialog_title" msgid="8907893815183913664">"Menghapus file aplikasi sementara"</string>
+    <string name="cache_clearing_dialog_text" msgid="7057784635111940957">"<xliff:g id="APP_SEEKING_PERMISSION">%s</xliff:g> ingin menghapus beberapa file sementara. Ini dapat meningkatkan penggunaan baterai atau data seluler."</string>
+    <string name="cache_clearing_in_progress_title" msgid="6902220064511664209">"Menghapus file aplikasi sementara…"</string>
+    <string name="clear" msgid="5524638938415865915">"Hapus"</string>
     <string name="allow" msgid="8885707816848569619">"Izinkan"</string>
     <string name="deny" msgid="6040983710442068936">"Tolak"</string>
-    <plurals name="permission_write_audio" formatted="false" msgid="3539998638571517689">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> mengubah <xliff:g id="COUNT">^2</xliff:g> file audio?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> mengubah file audio ini?</item>
+    <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk mengubah <xliff:g id="COUNT">^2</xliff:g> file audio?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk mengubah file audio ini?</item>
     </plurals>
-    <plurals name="permission_write_video" formatted="false" msgid="8695335317588947410">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> mengubah <xliff:g id="COUNT">^2</xliff:g> video?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> mengubah video ini?</item>
+    <plurals name="permission_write_video" formatted="false" msgid="1098082003326873084">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk mengubah <xliff:g id="COUNT">^2</xliff:g> video?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk mengubah video ini?</item>
     </plurals>
-    <plurals name="permission_write_image" formatted="false" msgid="9032317900030650266">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> mengubah <xliff:g id="COUNT">^2</xliff:g> foto?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> mengubah foto ini?</item>
+    <plurals name="permission_write_image" formatted="false" msgid="748745548893845892">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk mengubah <xliff:g id="COUNT">^2</xliff:g> foto?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk mengubah foto ini?</item>
     </plurals>
-    <plurals name="permission_write_generic" formatted="false" msgid="3099002288826692797">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> mengubah <xliff:g id="COUNT">^2</xliff:g> item?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> mengubah item ini?</item>
+    <plurals name="permission_write_generic" formatted="false" msgid="3270172714743671779">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk mengubah <xliff:g id="COUNT">^2</xliff:g> item?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk mengubah item ini?</item>
     </plurals>
-    <string name="permission_write_grant" msgid="3160858917750790130">"Ubah"</string>
-    <string name="permission_write_deny" msgid="7090074081877311071">"Batal"</string>
-    <plurals name="permission_trash_audio" formatted="false" msgid="6116371056718108592">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> memindahkan <xliff:g id="COUNT">^2</xliff:g> file audio ke sampah?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> memindahkan file audio ini ke sampah?</item>
+    <plurals name="permission_trash_audio" formatted="false" msgid="8907813869381755423">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk memindahkan <xliff:g id="COUNT">^2</xliff:g> file audio ke sampah?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk memindahkan file audio ini ke sampah?</item>
     </plurals>
-    <plurals name="permission_trash_audio_info" formatted="false" msgid="5002847308948758655">
-      <item quantity="other">File audio ini akan dihapus permanen setelah <xliff:g id="DURATION_1">^3</xliff:g> hari</item>
-      <item quantity="one">File audio ini akan dihapus permanen setelah <xliff:g id="DURATION_0">^3</xliff:g> hari</item>
+    <plurals name="permission_trash_video" formatted="false" msgid="4672871911555787438">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk memindahkan <xliff:g id="COUNT">^2</xliff:g> video ke sampah?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk memindahkan video ini ke sampah?</item>
     </plurals>
-    <plurals name="permission_trash_video" formatted="false" msgid="7900111984425589714">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> memindahkan <xliff:g id="COUNT">^2</xliff:g> video ke sampah?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> memindahkan video ini ke sampah?</item>
+    <plurals name="permission_trash_image" formatted="false" msgid="6400475304599873227">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk memindahkan <xliff:g id="COUNT">^2</xliff:g> foto ke sampah?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk memindahkan foto ini ke sampah?</item>
     </plurals>
-    <plurals name="permission_trash_video_info" formatted="false" msgid="4604871492287117394">
-      <item quantity="other">Video ini akan dihapus permanen setelah <xliff:g id="DURATION_1">^3</xliff:g> hari</item>
-      <item quantity="one">Video ini akan dihapus permanen setelah <xliff:g id="DURATION_0">^3</xliff:g> hari</item>
+    <plurals name="permission_trash_generic" formatted="false" msgid="3814167365075039711">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk memindahkan <xliff:g id="COUNT">^2</xliff:g> item ke sampah?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk memindahkan item ini ke sampah?</item>
     </plurals>
-    <plurals name="permission_trash_image" formatted="false" msgid="9204660448046457869">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> memindahkan <xliff:g id="COUNT">^2</xliff:g> foto ke sampah?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> memindahkan foto ini ke sampah?</item>
+    <plurals name="permission_untrash_audio" formatted="false" msgid="7795265980168966321">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk mengeluarkan <xliff:g id="COUNT">^2</xliff:g> file audio dari sampah?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk mengeluarkan file audio ini dari sampah?</item>
     </plurals>
-    <plurals name="permission_trash_image_info" formatted="false" msgid="4214797662365755925">
-      <item quantity="other">Foto ini akan dihapus permanen setelah <xliff:g id="DURATION_1">^3</xliff:g> hari</item>
-      <item quantity="one">Foto ini akan dihapus permanen setelah <xliff:g id="DURATION_0">^3</xliff:g> hari</item>
+    <plurals name="permission_untrash_video" formatted="false" msgid="332894888445508879">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk mengeluarkan <xliff:g id="COUNT">^2</xliff:g> video dari sampah?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk mengeluarkan video ini dari sampah?</item>
     </plurals>
-    <plurals name="permission_trash_generic" formatted="false" msgid="427752775725644743">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> memindahkan <xliff:g id="COUNT">^2</xliff:g> item ke sampah?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> memindahkan item ini ke sampah?</item>
+    <plurals name="permission_untrash_image" formatted="false" msgid="7024071378733595056">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk mengeluarkan <xliff:g id="COUNT">^2</xliff:g> foto dari sampah?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk mengeluarkan foto ini dari sampah?</item>
     </plurals>
-    <plurals name="permission_trash_generic_info" formatted="false" msgid="7932965324027540546">
-      <item quantity="other">Item ini akan dihapus permanen setelah <xliff:g id="DURATION_1">^3</xliff:g> hari</item>
-      <item quantity="one">Item ini akan dihapus permanen setelah <xliff:g id="DURATION_0">^3</xliff:g> hari</item>
+    <plurals name="permission_untrash_generic" formatted="false" msgid="6872817093731198374">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk mengeluarkan <xliff:g id="COUNT">^2</xliff:g> item dari sampah?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk mengeluarkan item ini dari sampah?</item>
     </plurals>
-    <string name="permission_trash_grant" msgid="2279489962040272178">"Pindahkan ke sampah"</string>
-    <string name="permission_trash_deny" msgid="2447949475239137483">"Batal"</string>
-    <plurals name="permission_untrash_audio" formatted="false" msgid="5716379492864435914">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> mengeluarkan <xliff:g id="COUNT">^2</xliff:g> file audio dari sampah?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> mengeluarkan file audio ini dari sampah?</item>
+    <plurals name="permission_delete_audio" formatted="false" msgid="6848547621165184719">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk menghapus <xliff:g id="COUNT">^2</xliff:g> file audio?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk menghapus file audio ini?</item>
     </plurals>
-    <plurals name="permission_untrash_video" formatted="false" msgid="4554487646802678525">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> mengeluarkan <xliff:g id="COUNT">^2</xliff:g> video dari sampah?</item>
-      <item quantity="one">izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> mengeluarkan video ini dari sampah?</item>
+    <plurals name="permission_delete_video" formatted="false" msgid="1251942606336748563">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk menghapus <xliff:g id="COUNT">^2</xliff:g> video?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk menghapus video ini?</item>
     </plurals>
-    <plurals name="permission_untrash_image" formatted="false" msgid="3209306923499767662">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> mengeluarkan <xliff:g id="COUNT">^2</xliff:g> foto dari sampah?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> mengeluarkan foto ini dari sampah?</item>
+    <plurals name="permission_delete_image" formatted="false" msgid="2303409455224710111">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk menghapus <xliff:g id="COUNT">^2</xliff:g> foto?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk menghapus foto ini?</item>
     </plurals>
-    <plurals name="permission_untrash_generic" formatted="false" msgid="4607666277638602132">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> mengeluarkan <xliff:g id="COUNT">^2</xliff:g> item dari sampah?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> mengeluarkan item ini dari sampah?</item>
+    <plurals name="permission_delete_generic" formatted="false" msgid="1412218850351841181">
+      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> untuk menghapus <xliff:g id="COUNT">^2</xliff:g> item?</item>
+      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> untuk menghapus item ini?</item>
     </plurals>
-    <string name="permission_untrash_grant" msgid="8438940480373451790">"Dipindahkan dari sampah"</string>
-    <string name="permission_untrash_deny" msgid="8008055757469903604">"Batal"</string>
-    <plurals name="permission_delete_audio" formatted="false" msgid="6390202287788379608">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> menghapus <xliff:g id="COUNT">^2</xliff:g> file audio?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> menghapus file audio ini?</item>
-    </plurals>
-    <plurals name="permission_delete_video" formatted="false" msgid="1577978206881284398">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> menghapus <xliff:g id="COUNT">^2</xliff:g> video?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> menghapus video ini?</item>
-    </plurals>
-    <plurals name="permission_delete_image" formatted="false" msgid="8435429587272893063">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> menghapus <xliff:g id="COUNT">^2</xliff:g> foto?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> menghapus foto ini?</item>
-    </plurals>
-    <plurals name="permission_delete_generic" formatted="false" msgid="5949614272661654178">
-      <item quantity="other">Izinkan <xliff:g id="APP_NAME_1">^1</xliff:g> menghapus <xliff:g id="COUNT">^2</xliff:g> item?</item>
-      <item quantity="one">Izinkan <xliff:g id="APP_NAME_0">^1</xliff:g> menghapus item ini?</item>
-    </plurals>
-    <string name="permission_delete_grant" msgid="8682518049167813926">"Hapus"</string>
-    <string name="permission_delete_deny" msgid="3742780367403897552">"Batal"</string>
 </resources>
